adding reply features
